everything/gitops/apps/stock/backend/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stock-backend
  namespace: stock
  labels:
    app: stock-backend
spec:
  type: ClusterIP
  selector:
    app: stock-backend
  ports:
    - name: http
      port: 80
      targetPort: 8001
      protocol: TCP
